--- a/packages/@n8n/config/package.json
+++ b/packages/@n8n/config/package.json
@@ -25,6 +25,10 @@
     "reflect-metadata": "catalog:",
     "zod": "catalog:"
   },
+   "engines": {
+    "node": ">=18.0.0 <20.0.0",
+    "pnpm": ">=10.2.1"
+  },
   "devDependencies": {
     "@n8n/typescript-config": "workspace:*"
   }
